<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/bottom_home"
        android:title="@string/inicio"
        android:icon="@drawable/home"/>
  <!--  <item
        android:id="@+id/bottom_prospectos"
        android:title="@string/prospectos"
        android:icon="@drawable/prospecto"/>-->
    <item
        android:id="@+id/bottom_catalogos"
        android:title="@string/catalogos"
        android:icon="@drawable/baseline_catalogos"/>

    <item
        android:id="@+id/bottom_actividad"
        android:title="@string/actividad"
        android:icon="@drawable/baseline_bar_chart_24"/>
    <item
        android:id="@+id/bottom_representantes"
        android:title="@string/representantes"
        android:icon="@drawable/visitas"/>
</menu>