<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="start"
    android:background="@drawable/login3"
    tools:context=".prospectos.ui.view.encuesta.Encuesta5">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarEncuesta5"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="19dp"
        android:layout_marginBottom="90dp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:background="@drawable/custom_edit_text"
        tools:ignore="MissingConstraints">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="14dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/encuesta5"
                android:id="@+id/txtEncabezado"
                android:textSize="22sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/blue_progela"/>
            <CheckBox
                android:id="@+id/checkBoxPrecio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/cvPrecio" />
            <CheckBox
                android:id="@+id/checkBoxPresentacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/cvPresentacion" />
            <CheckBox
                android:id="@+id/checkBoxMarca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/cvMarca" />
            <CheckBox
                android:id="@+id/checkBoxCalidad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/cvCalidad" />


            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/btnFinalizar"
                android:textSize="18sp"
                android:layout_marginTop="15dp"
                android:text="@string/finalizar"
                android:backgroundTint="@color/blue_progela"
                app:cornerRadius="20dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>
