<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="start"
    android:background="@drawable/login3"
    tools:context=".prospectos.ui.view.encuesta.Encuesta1">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarEncuesta1"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="150dp"
        android:layout_marginTop="16dp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:background="@drawable/custom_edit_text">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="14dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/encuesta1"
                android:id="@+id/txtEncabezado"
                android:textSize="25sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/blue_progela"/>

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/radioButtonSi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/si" />
                <RadioButton
                    android:id="@+id/radioButtonNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/no" />

            </RadioGroup>

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/btnSiguiente"
                android:textSize="18sp"
                android:layout_marginTop="15dp"
                android:text="@string/continuar"
                android:backgroundTint="@color/blue_progela"
                app:cornerRadius="20dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>
