<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".clientes.ui.view.editar.Editar_ClientesF1">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarFragment1"
        android:layout_width="415dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="130dp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="30dp"
        android:background="@drawable/custom_edit_text"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="14dp">

        <TextView
            android:id="@+id/loginText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/editarEtapa1"
            android:textAlignment="center"
            android:textColor="@color/blue_progela"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtRazonSocial"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_edit_text"
            android:drawableStart="@drawable/baseline_person_24"
            android:hint="@string/edit_razon_social"
            android:imeOptions="actionNext"
            android:inputType="textAutoComplete"
            android:maxLength="200"
            android:maxLines="1"
            android:padding="8dp"
            android:singleLine="true"
            android:textColor="@color/blue_progela"
        android:textColorHint="#C9C8CA" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="320dp"
            android:layout_height="70dp"
            android:layout_margin="1dp"
            app:boxStrokeColor="#C9C8CA"
            app:hintTextColor="#C9C8CA"
            android:paddingTop="8dp"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false">

            <AutoCompleteTextView
                android:id="@+id/txtVialidad"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/custom_edit_text"
                android:completionThreshold="1"
                android:drawableStart="@drawable/baseline_moving_24"
                android:fontFamily="sans-serif"
                android:gravity="center_vertical"
                android:imeOptions="actionNext"
                android:inputType="none"
                android:maxLines="1"
                android:paddingStart="8dp"
                android:paddingBottom="12dp"
                android:singleLine="true"
                android:hint="@string/edit_vialidad"
                android:textColor="@color/blue_progela"
                android:textColorHint="#C9C8CA"
                android:textSize="18sp"
                tools:ignore="RtlSymmetry" />
        </com.google.android.material.textfield.TextInputLayout>

        <EditText
        android:id="@+id/txtCalle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="-7dp"
        android:background="@drawable/custom_edit_text"
        android:drawableStart="@drawable/baseline_signpost_24"
        android:hint="@string/edit_calle"
        android:imeOptions="actionNext"
        android:inputType="textAutoComplete"
        android:maxLines="1"
        android:padding="8dp"
        android:singleLine="true"
        android:textColor="@color/blue_progela"
    android:textColorHint="#C9C8CA" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/txtManzana"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/custom_edit_text"
            android:drawableStart="@drawable/baseline_place_24"
            android:hint="@string/edit_manzana"
            android:imeOptions="actionNext"
            android:inputType="textAutoComplete"
            android:maxLength="100"
            android:maxLines="1"
            android:padding="8dp"
            android:singleLine="true"
            android:textColor="@color/blue_progela"
        android:textColorHint="#C9C8CA" />

        <EditText
            android:id="@+id/txtLote"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/custom_edit_text"
            android:drawableStart="@drawable/baseline_place_24"
            android:hint="@string/edit_lote"
            android:imeOptions="actionNext"
            android:inputType="textAutoComplete"
            android:maxLength="100"
            android:maxLines="1"
            android:padding="8dp"
            android:singleLine="true"
            android:textColor="@color/blue_progela"
        android:textColorHint="#C9C8CA" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/txtNumeroExterior"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/custom_edit_text"
            android:drawableStart="@drawable/baseline_numbers_24"
            android:hint="@string/edit_numero_exterior"
            android:imeOptions="actionNext"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:padding="8dp"
            android:singleLine="true"
            android:textColor="@color/blue_progela"
        android:textColorHint="#C9C8CA" />

        <EditText
            android:id="@+id/txtNumeroInterior"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_edit_text"
            android:drawableStart="@drawable/baseline_numbers_24"
            android:hint="@string/edit_numero_interior"
            android:imeOptions="actionNext"
            android:inputType="textAutoComplete"
            android:maxLength="100"
            android:maxLines="1"
            android:padding="8dp"
            android:singleLine="true"
            android:textColor="@color/blue_progela"
        android:textColorHint="#C9C8CA" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:padding="10dp">

        <Button
            android:id="@+id/btnSiguiente"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:backgroundTint="@color/blue_progela"
            android:text="@string/confirmar"
            android:textSize="18sp"
            app:cornerRadius="20dp" />
    </LinearLayout>

</LinearLayout>
    </androidx.cardview.widget.CardView>
    </LinearLayout>
